Correction visuelle version mobile.

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ main {
     height: 46px;
     width: 200px;
     border: none;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
     text-align: center;
 }
@@ -654,29 +654,42 @@ li:hover {
         font-size: 14px;
     }
     header {
-        height: 200px;
+        height: 150px;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding: 0px 20px;
+        padding: 0px;
+        margin-bottom: 10px;
     }
     #headerLogo {
         order: 1;
-        margin: 0;
+        margin: 0px 35px;
     }
     #navSignin {
         order: 2;
+        margin: 0px 35px;
     }
     #navBar {
         order: 3;
         width: 100%;
         height: 100px;
     }
+    #filterTheme {
+        width: 100%;
+    }
     .hostingLinks, .activityLinks {
         width: 100%;
         height: 270px;
     }
+    #navBar {
+        height: 50px;
+    }
+    .navLinks {
+        height: 50px;
+        line-height: 50px;
+        border-bottom: solid 3px #F2F2F2;
+    }
     .navLinks:hover {
-        border-bottom: 2px solid #0065FC;
+        border-bottom: 3px solid #0065FC;
         border-top: none;
     }
     .footerTheme {
@@ -713,8 +726,4 @@ li:hover {
     .fa-search {
         color: #F2F2F2;
     }
-}
-
-h1 {
-    color :red;
 }
